1.6.4

New menu item for importing private keys.
Modify createaccount RPC command so that it can also create legacy accounts.
Support for read only (watch) HD accounts.
New RPC commands for read only (watch) HD accounts. getreadonlyaccount, importreadonlyaccount.
Support for read only (watch) HD seeds.
New RPC command for read only (watch) HD seeds, getreadonlyseed.
Add new command line flag '-coinbasesignature=' to make it easy to add coinbase signatures to generated blocks (predominantly meant for testnet)

1.6.3

Fix incorrect getaddressesbyaccount output.
Fix a possible crash in the checkpoint system.

1.6.2

Bring back RPC command that was removed in 1.6.0, adapted to the new account system - getaccount "Guldenaddress"
Bring back RPC command that was removed in 1.6.0, adapted to the new account system - getaddressesbyaccount "account"

1.6.1

Minor bugfix release.

1.6.0

New user interface with drastic improvements over the old user interface.
Ticker/Exchange rate integration into app.
In wallet support for buying coins with euro via nocks.
New 'account based' wallet internals.
New in wallet buy support for bitcoin and IBAN via nocks API.
Full support for BIP33 and BIP44 HD wallet standards with mnemonics.
Implement support for synchronised mobile accounts.
Update to upstream bitcoin 0.13 codebase providing numerous bug fixes and improvements.
Improve the checkpointing code, fix a checkpoint corruption issue that some users were experiencing.
Change 'rpconlylistsecuredtransactions' to be on by default.


1.5.5

Introduce a checkpoint system to protect against 50% attacks.
Update the UI so that only checkpointed transactions are marked as 'final'
Update several RPC commands so that exchanges can make use of the checkpoint system to be double spend proof.



1.5.4

Minor bugfix release.



1.5.3

Minor bugfix release.



1.5.2

Minor bugfix release.
Updated to new seed nodes.
Fixed an issue with some external URIs not working on OSX machines.